# what-if-I-could-fix-the-world

./: 0000-the-world-is-broken.md  0001-a-new-start.md  0002-and-the-working-nation-attacked.md  0003-the-numbers-what-do-they-mean.md  0004-.md  LICENSE.md  README.md  package-lock.json  tsconfig.json
.kilocode/: instructions.md  mcp.json
content/: 0000-the-world-is-broken.md  0001-a-new-start.md  0002-and-the-working-nation-attacked.md  0003-the-numbers-what-do-they-mean.md  README.md
data/: story_ai.db
plans/: ai-rpg-platform-architecture.md  implementation-plan.md  monetization-model.md
site/: package.json
story-ai-studio/: .gitignore  README.md  docker-compose.yml  package.json  (+1 more)
story-ai-studio/services/api/: .env.example  Dockerfile  README.md  pyproject.toml  test_login.json  test_register.json
story-ai-studio/services/api/app/: __init__.py  main.py
story-ai-studio/services/api/app/ai/: __init__.py  base.py  openai_provider.py  prompts.py
story-ai-studio/services/api/app/core/: __init__.py  config.py  database.py  security.py
story-ai-studio/services/api/app/models/: __init__.py  character.py  location.py  session.py  story.py  user.py
story-ai-studio/services/api/app/routes/: __init__.py  auth.py  character.py  location.py  session.py  story.py
story-ai-studio/services/api/app/schemas/: __init__.py  auth.py  character.py  location.py  session.py  story.py
story-ai-studio/services/api/app/services/: auth.py  story_engine.py
story-ai-studio/services/api/tests/: __init__.py  conftest.py  test_auth.py  test_character.py  test_location.py  test_session.py  test_story.py
(+36 files in other folders)
